pull latest files

--- a/express_mysql/html/form.html
+++ b/express_mysql/html/form.html
@@ -7,8 +7,8 @@
 <body>
 <h1>入力フォーム</h1>
 <form action="/" method="POST">
-    name <input type="text" name="name"><br>
-    email <input type="text" name="email"><br>
+    Name <input type="text" name="name"><br>
+    Email <input type="text" name="email"><br>
     <button type="submit">送信</button>
 </form>
 </body>
