--- a/express_mysql/html/form.html
+++ b/express_mysql/html/form.html
@@ -2,14 +2,15 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>入力フォーム</title>
+	<title>登録フォーム</title>
 </head>
 <body>
-<h1>入力フォーム</h1>
+<h1>登録フォーム</h1>
 <form action="/" method="POST">
-    Name <input type="text" name="name"><br>
-    Email <input type="text" name="email"><br>
-    <button type="submit">送信</button>
+    名前 <input type="text" name="name"><br>
+    メールアドレス <input type="text" name="email"><br>
+    パスワード <input type="text" name="password"><br>
+    <button type="submit">登録</button>
 </form>
 </body>
 </html>
